--- a/views/multiplexes_index.erb
+++ b/views/multiplexes_index.erb
@@ -7,6 +7,7 @@
 
   <thead>
     <tr>
+      <th scope="col">EID</th>
       <th scope="col">Name</th>
       <th scope="col">Area</th>
       <th scope="col">Block</th>
@@ -18,6 +19,9 @@
   <tbody>
     <% @multiplexes.each do |multiplex| %>
       <tr>
+        <td>
+          <%= multiplex.eid %>
+        </td>
         <td>
           <a href="<%= multiplex.path %>"><%= multiplex.name %></a>
         </td>
