Added 'Map' headings

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -86,6 +86,7 @@
   </div>
   
   <div class="col-md-5">
+    <h3>Map</h3>
     <%== partial('map', :locals => {:transmitters => [@transmitter]}) %>
   </div>
 </div>
