--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -73,6 +73,7 @@
   </div>
 
   <div class="col-md-5">
+    <h3>Map</h3>
     <%== partial('map', :locals => {:transmitters => @multiplex.transmitters}) %>
   </div>
 </div>
