Improved layout of the last updated paragraph Now indented the same as the rest of the page

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -91,8 +91,10 @@
   </div>
 </div>
 
-<div class="row">
-  <p class="text-secondary mt-3">
-    This page uses data from Ofcom that was last updated: <%= @transmitter.updated_at %>.
-  </p>
+<div class="row mt-3">
+  <div class="col-md-12">
+    <p class="text-secondary mt-3">
+      This page uses data from Ofcom that was last updated: <%= @transmitter.updated_at %>.
+    </p>
+  </div>
 </div>
