--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -78,8 +78,10 @@
   </div>
 </div>
 
-<div class="row">
-  <p class="text-secondary mt-3">
-    This page uses data from Ofcom that was last updated: <%= @multiplex.updated_at %>.
-  </p>
+<div class="row mt-3">
+  <div class="col-md-12">
+    <p class="text-secondary mt-3">
+      This page uses data from Ofcom that was last updated: <%= @multiplex.updated_at %>.
+    </p>
+  </div>
 </div>
