Corrected the spelling of Multiplexes

--- a/views/multiplexes_index.erb
+++ b/views/multiplexes_index.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, "List of DAB Multiples in the UK" %>
+<% content_for :page_title, "List of DAB Multiplexes in the UK" %>
 
 <h1><%= content_for :page_title %></h1>
 
