--- a/views/authorities_index.erb
+++ b/views/authorities_index.erb
@@ -16,7 +16,7 @@
     <% @authorities.each do |authority| %>
       <tr>
         <td>
-          <a href="<%= authority.path %>"><%= authority.fqdn %></a>
+          <%== link_to(authority.fqdn, authority.path) %></a>
         </td>
         <td>
           <%= authority.name %>
