--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -35,7 +35,7 @@
               <%= multiplex.eid %>
             </td>
             <td>
-              <a href="<%= multiplex.path %>"><%= multiplex.name %></a>
+              <%== link_to(multiplex.name, multiplex.path) %>
             </td>
             <td>
               <%= multiplex.block %>
@@ -70,7 +70,7 @@
             </td>
             <td>
               <% if bearer.service %>
-                <a href="<%= bearer.path %>"><%= bearer.service.name %></a>
+                <%== link_to(bearer.service.name, bearer.path) %>
               <% else %>
                 <%= bearer.ofcom_label %>
               <% end %>
