--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -88,7 +88,17 @@
   <div class="col-md-5">
     <h3>Map</h3>
     <%== partial('map', :locals => {:transmitters => [@transmitter]}) %>
+    <div>
+      <small>
+        <b>Map links:</b>
+        <% escaped_name = CGI.escape(@transmitter.name + " Transmitter") %>
+        <%== link_to('OpenStreetMap', "https://www.openstreetmap.org/#map=17/#{@transmitter.lat}/#{@transmitter.long}") %>,
+        <%== link_to('Bing Maps', "https://www.bing.com/maps?v=2&cp=#{@transmitter.lat}~#{@transmitter.long}&lvl=16&dir=0&sty=o&sp=point.#{@transmitter.lat}_#{@transmitter.long}_#{escaped_name}") %>,
+        <%== link_to('Google Maps', "https://www.google.com/maps/search/?api=1&query=#{@transmitter.lat},#{@transmitter.long}") %>
+      </small>
+    </div>
   </div>
+
 </div>
 
 <div class="row mt-3">
