Added Ensemble ID to the multiple page

--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -6,6 +6,8 @@
 
   <div class="col-md-7">
     <dl class="row">
+      <dt class="col-sm-4">Ensemble ID</dt>
+      <dd class="col-sm-8"><%= @multiplex.eid %></dd>
       <dt class="col-sm-4">Licensed Area</dt>
       <dd class="col-sm-8"><%= @multiplex.area %></dd>
       <dt class="col-sm-4">Frequency</dt>
