--- a/views/authorities_index.erb
+++ b/views/authorities_index.erb
@@ -10,7 +10,7 @@
       <th scope="col">FQDN</th>
       <th scope="col">Name</th>
       <th scope="col"><abbr title="TS 102 818 v3.1.1 – Service and Programme Information">RadioEPG</abbr></th>
-      <th scope="col"><abbr title="RTAG01 v1.0.0 Draft 7">RadioTag</abbr></th>
+      <th scope="col">RadioTag</th>
       <th scope="col"><abbr title="TS 101 499 v3.1.1 – Slideshow">RadioVis</abbr></th>
     </tr>
   </thead>
