--- a/views/_applications.erb
+++ b/views/_applications.erb
@@ -1,3 +1,5 @@
+<% bearer ||= nil %>
+
 <div class="row">
   <div class="col">
     <h2>Applications</h2>
@@ -10,7 +12,7 @@
         <div class="card-body">
           <p class="card-text">
             <%== tick_cross(authority.have_radioepg?) %>
-            This authority <%= authority.have_radioepg? ? 'suppports' : 'does not support' %>
+            This <%= type %> <%= authority.have_radioepg? ? 'suppports' : 'does not support' %>
             <abbr title="TS 102 818 v3.1.1 – Service and Programme Information">RadioEPG</abbr>.
           </p>
           <% if authority.have_radioepg? %>
@@ -26,7 +28,7 @@
         <div class="card-body">
           <p class="card-text">
             <%== tick_cross(authority.have_radiotag?) %>
-            This authority <%= authority.have_radiotag? ? 'suppports' : 'does not support' %>
+            This <%= type %> <%= authority.have_radiotag? ? 'suppports' : 'does not support' %>
             RadioTag.
           </p>
           <% if authority.have_radiotag? %>
@@ -44,13 +46,17 @@
         <div class="card-body">
           <p class="card-text">
             <%== tick_cross(authority.have_radiovis?) %>
-            This authority <%= authority.have_radiovis? ? 'suppports' : 'does not support' %>
+            This <%= type %> <%= authority.have_radiovis? ? 'suppports' : 'does not support' %>
             <abbr title="TS 101 499 v3.1.1 – Slideshow">RadioVis</abbr>.
           </p>
           <% if authority.have_radiovis? %>
-            <p class="card-text">
-              <b>Server</b>: <code><%= authority.radiovis_server %></code>
-            </p>
+            <% if bearer %>
+              <%== link_to('Test Tool', bearer.radiodns_test_url, :class => "btn btn-sm btn-primary float-right") %>
+            <% else %>
+              <p class="card-text">
+                <b>Server</b>: <code><%= authority.radiovis_server %></code>
+              </p>
+            <% end %>
           <% end %>
         </div>
       </div>
