Added `canonical_url` helper

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <link rel="canonical" href="https://www.radiodns.uk<%= request.path %>" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <title><%= content_for :page_title %> - radiodns.uk</title>
+    <link rel="canonical" href="<%= canonical_url %>" />
+
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" href="/leaflet/leaflet.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
