Made navbar collapse on small screen sizes

--- a/views/_navbar.erb
+++ b/views/_navbar.erb
@@ -1,20 +1,27 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-charlottes-locks">
+<nav class="navbar navbar-expand-sm navbar-dark bg-charlottes-locks">
   <a class="navbar-brand" href="/">
     <img src="/images/radiodns.uk-logo.png" width="185" height="35" alt="radiodns.uk" />
   </a>
 
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/services">Services</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/transmitters">Transmitters</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/multiplexes">Multiplexes</a>
-    </li>
-  </ul>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div id="navbarCollapse" class="collapse navbar-collapse">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/authorities">Authorities</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/services">Services</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/transmitters">Transmitters</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/multiplexes">Multiplexes</a>
+      </li>
+    </ul>
+  </div>
 </nav>
