Added <h1> containing "RadioDNS.uk" to the navbar-brand

--- a/views/_navbar.erb
+++ b/views/_navbar.erb
@@ -1,7 +1,10 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-charlottes-locks">
-  <a class="navbar-brand" href="/">
-    <img src="/images/radiodns.uk-logo.png" width="185" height="35" alt="radiodns.uk" />
-  </a>
+  <h1 class="navbar-brand text-hide m-0">
+    <a href="/">
+      <img src="/images/radiodns.uk-logo.png" width="185" height="35" alt="radiodns.uk" />
+      RadioDNS.uk
+    </a>
+  </h1>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
