Replaced <h1> on each page template with an <h2> in the layout

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -1,6 +1,4 @@
-<% content_for :page_title, @transmitter.name %>
-
-<h1><%= @transmitter.name %> Transmitter</h1>
+<% content_for :page_title, "#{@transmitter.name} Transmitter" %>
 
 <div class="row">
 
