Added /logos webpage

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -29,3 +29,7 @@
     <li><%= Transmitter.count %> <a href="/transmitters">Transmitter sites</a></li>
   </ul>
 </div>
+
+<div class="container">
+  <p>You can also <a href="/logos">download logo packs</a>, containing all the UK radio stations logos in a Zip file.</p>
+</div>
