Add 'UK' to the logos page title

--- a/views/logos.erb
+++ b/views/logos.erb
@@ -1,9 +1,9 @@
-<% content_for :page_title, 'Radio Station Logo Packs' %>
+<% content_for :page_title, 'UK Radio Station Logo Packs' %>
 
 <div class="container">
   <p>
     Some cars allow you add logos for radio station presets by copying them over 
-    using a USB memory stick. These logo packs make it easy for you to download
+    using a memory card. These logo packs make it easy for you to download
     the latest version logos, as provided by broadcasters, for your car.
   </p>
 
