--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -31,5 +31,12 @@
 </div>
 
 <div class="container">
+  <p>The following reports list some of the data that doesn't match up:</p>
+  <ul>
+    <li><a href="/reports/unknown-to-ofcom">Bearers that aren't known to Ofcom</a></li>
+  </ul>
+</div>
+
+<div class="container">
   <p>You can also <a href="/logos">download logo packs</a>, containing all the UK radio stations logos in a Zip file.</p>
 </div>
