Created 'no-si-xml' report

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -34,6 +34,7 @@
   <p>The following reports list some of the data that doesn't match up:</p>
   <ul>
     <li><a href="/reports/unknown-to-ofcom">Bearers that aren't known to Ofcom</a></li>
+    <li><a href="/reports/no-si-xml">Stations with no service entry</a></li>
   </ul>
 </div>
 
