--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -33,8 +33,9 @@
 <div class="container">
   <p>The following reports list some of the data that doesn't match up:</p>
   <ul>
-    <li><a href="/reports/unknown-to-ofcom">Bearers that aren't known to Ofcom</a></li>
+    <li><a href="/reports/no-radiodns">Bearers with no radiodns.org entry</a></li>
     <li><a href="/reports/no-si-xml">Stations with no service entry</a></li>
+    <li><a href="/reports/unknown-to-ofcom">Bearers that aren't known to Ofcom</a></li>
   </ul>
 </div>
 
