--- a/views/services_show.erb
+++ b/views/services_show.erb
@@ -1,4 +1,18 @@
 <% content_for :page_title, @service.name %>
+<% content_for :page_description, @service.short_description || @service.long_description %>
+
+<% content_for :head do %>
+  <meta property="og:type" content="music.radio_station" />
+  <% @service.logos_set.each do |logo| %>
+    <meta property="og:image:url" content="<%= logo.url %>" />
+    <% unless logo.mime_type.nil? %>
+    <meta property="og:image:type" content="<%= logo.mime_type %>" />
+    <% end %>
+    <meta property="og:image:width" content="<%= logo.width %>" />
+    <meta property="og:image:height" content="<%= logo.height %>" />
+  <% end %>
+
+<% end %>
 
 <dl class="row">
   <dt class="col-sm-3">Authority:</dt>
