--- a/views/authorities_show.erb
+++ b/views/authorities_show.erb
@@ -6,6 +6,7 @@
     <meta property="og:image:url" content="<%= @authority.logo %>" />
     <meta property="og:image:width" content="320" />
     <meta property="og:image:height" content="240" />
+    <meta property="twitter:image" content="<%= @authority.logo %>" />
   <% end %>
 
 <% end %>
