Added logo to Service twitter card

--- a/views/services_show.erb
+++ b/views/services_show.erb
@@ -12,6 +12,9 @@
     <meta property="og:image:height" content="<%= logo.height %>" />
   <% end %>
 
+  <% unless @service.logo_600.nil? %>
+    <meta property="twitter:image" content="<%= @service.logo_600.url %>" />
+  <% end %>
 <% end %>
 
 <dl class="row">
