--- a/views/authorities_index.erb
+++ b/views/authorities_index.erb
@@ -20,7 +20,7 @@
           <%== link_to(authority.fqdn, authority.path) %></a>
         </td>
         <td>
-          <%= authority.name %>
+          <%= authority %>
         </td>
         <td>
           <%== tick_cross(authority.have_radioepg?) %>
