--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -12,6 +12,8 @@
       <dd class="col-sm-8"><%= @transmitter.lat %>, <%= @transmitter.long %></dd>
       <dt class="col-sm-4">Site Height</dt>
       <dd class="col-sm-8"><%= @transmitter.site_height %>m</dd>
+      <dt class="col-sm-4">Total Power</dt>
+      <dd class="col-sm-8"><%= @transmitter.total_power %> kW</dd>
     </dl>
 
     <% unless @transmitter.multiplexes.count == 0 %>
