Updated homepage description to refer to 'Service and Programme Information'

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -15,8 +15,9 @@
 
     The list of frequencies, identifiers, multiplexes and transmitters is retrieved from the
     <a href="https://www.ofcom.org.uk/spectrum/information/radio-tech-parameters">Ofcom Technical parameters</a>.
-    The service information is then fetched using the RadioEPG Service Information protocol
-    (aka <a href="http://www.etsi.org/deliver/etsi_ts/102800_102899/102818/03.01.01_60/ts_102818v030101p.pdf">ETSI TS 102 818</a>).
+    The service information is then fetched using the
+    <a href="http://www.etsi.org/deliver/etsi_ts/102800_102899/102818/03.01.01_60/ts_102818v030101p.pdf">ETSI TS 102 818</a>
+    Service and Programme Information standard (aka RadioEPG).
   </p>
 </div>
 
