Added JSON-LD for the authority pages

--- a/views/authorities_show.erb
+++ b/views/authorities_show.erb
@@ -61,3 +61,7 @@
     <% end %>
   </div>
 </div>
+
+<script type="application/ld+json">
+  <%== render('authorities_show.jsonld', engine: 'yajl') %>
+</script>
