Added schema.org JSON-LD for transmitters

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -108,3 +108,7 @@
     </p>
   </div>
 </div>
+
+<script type="application/ld+json">
+  <%== render('transmitters_show.jsonld', engine: 'yajl') %>
+</script>
