--- a/views/services_show.erb
+++ b/views/services_show.erb
@@ -146,3 +146,7 @@
     </p>
   </div>
 </div>
+
+<script type="application/ld+json">
+  <%== render('services_show.jsonld', engine: 'yajl') %>
+</script>
