Added displaying of Transmitter county to HTML, CSV and JSON

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -6,6 +6,8 @@
     <dl class="row">
       <dt class="col-sm-4">Area</dt>
       <dd class="col-sm-8"><%= @transmitter.area %></dd>
+      <dt class="col-sm-4">County</dt>
+      <dd class="col-sm-8"><%= @transmitter.county %></dd>
       <dt class="col-sm-4">National Grid Reference</dt>
       <dd class="col-sm-8"><%= @transmitter.ngr %></dd>
       <dt class="col-sm-4">WGS84 Co-ordinates</dt>
