--- a/views/transmitters_index.erb
+++ b/views/transmitters_index.erb
@@ -7,6 +7,7 @@
     <tr>
       <th scope="col">Name</th>
       <th scope="col">Area</th>
+      <th scope="col">County</th>
     </tr>
   </thead>
 
@@ -18,6 +19,9 @@
         </td>
         <td>
           <%= transmitter.area %>
+        </td>
+        <td>
+          <%= transmitter.county %>
         </td>
       </tr>
     <% end %>
