Corrected spelling of Coordinate

--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -10,7 +10,7 @@
       <dd class="col-sm-8"><%= @transmitter.county %></dd>
       <dt class="col-sm-4">National Grid Reference</dt>
       <dd class="col-sm-8"><%= @transmitter.ngr %></dd>
-      <dt class="col-sm-4">WGS84 Co-ordinates</dt>
+      <dt class="col-sm-4">WGS84 Coordinates</dt>
       <dd class="col-sm-8"><%= @transmitter.lat %>, <%= @transmitter.long %></dd>
       <dt class="col-sm-4">Site Height</dt>
       <dd class="col-sm-8"><%= @transmitter.site_height %>m</dd>
