Added word 'Multiplex' as suffix to multiplex page titles

--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, @multiplex.name %>
+<% content_for :page_title, "#{@multiplex.name} Multiplex" %>
 
 <div class="row">
 
